# small_weather_app

Docker/: docker_compose.yml  weather_blog.conf
weather_api/: .gitignore  pyproject.toml
weather_api/members/: admin.py  models.py  serializers.py  urls.py  views.py
weather_api/members/migrations/: 0001_initial.py
weather_api/members/templates/users/: login.html  signup.html
weather_api/templates/base/: base.html  home.html  home0.html
weather_api/templates/general/: city_weather.html  home.html
weather_api/weather_api/: settings.py  urls.py
weather_api/weather_backend/: API_KEY_WEATHER  admin.py  models.py  serializers.py  urls.py  views.py
weather_api/weather_backend/migrations/: 0001_initial.py
weather_api/weather_backend/templates/base/: base.html
weather_api/weather_backend/templates/general/: city2.html  city_weather.html  home.html
weather_api/weather_backend/templates/partials/: return_weather.html  weather_form.html
weather_api/weather_backend/templates/partials_blog_posts/: blog_post.html  blog_posts.html
